Add REST API to add address for a customer
